equipment photo - refactoring & tests
